Lots of changes, about to change to cloudflare

--- a/gui/index.html
+++ b/gui/index.html
@@ -93,19 +93,19 @@
 
 <!-- =======================
 JS libraries, plugins and custom scripts -->
-<script src="assets/js/htmx.js"></script>
+<script src="./assets/js/htmx.js"></script>
 
 <!-- Bootstrap JS -->
-<script src="assets/vendor/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+<script src="./assets/vendor/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 
 <!-- Vendors -->
-<script src="assets/vendor/OverlayScrollbars-master/js/OverlayScrollbars.min.js"></script>
+<script src="./assets/vendor/OverlayScrollbars-master/js/OverlayScrollbars.min.js"></script>
 
 <!-- Theme Functions -->
-<script src="assets/js/functions.js"></script>
+<script src="./assets/js/functions.js"></script>
 
 <!-- Prism -->
-<script src="assets/vendor/prism/prism.js"></script>
+<script src="./assets/vendor/prism/prism.js"></script>
 
 
   </body>
